--- a/style.css
+++ b/style.css
@@ -266,6 +266,7 @@ a:hover {
 
 .voffset {
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .voffset-lg {
@@ -677,7 +678,8 @@ a {
 }
 
 p {
-    font-size: 11px;
+    font-size: 15px;
+    line-height: 20px;
 }
 
 .tight-width-whitespace {
@@ -718,7 +720,7 @@ h3 {
 
 .med-width-whitespace {
     max-width: 800px;
-    margin: auto auto auto auto;
+    margin: 50px auto auto auto;
     box-shadow: 0px 0px 0px #000000;
 }
 
@@ -779,12 +781,12 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #ffccbc;
+    background: #ff7043;
     color: #FFFFFF !important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #fbe9e7!important;
+    background: #ffccbc!important;
     color: #FFFFFF!important;
 }
 
