--- a/style.css
+++ b/style.css
@@ -685,7 +685,7 @@ p {
 .citation {
     font-size: 20px;
     font-style: italic;
-    margin: 0 181px;
+    margin: 0 22%;
     line-height: 25px;
 
 }
@@ -836,7 +836,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation.jpg");
 }
 
 .txt-contact {
