width et height img

--- a/style.css
+++ b/style.css
@@ -302,6 +302,11 @@ a:hover {
     line-height: 44px;
 }
 
+.logo {
+    width: 421px;
+    height: 78px;
+}
+
 .navbar-brand img {
     max-height: 200px;
     margin: 0 5px 0 0;
@@ -844,6 +849,16 @@ h4 {
     background-color: coral;
     padding: 10px;
     color: white!important;
+}
+
+.image-resize-mode {
+    width: 150px;
+    height: 150px;
+}
+
+.img-responsive {
+    width: 270px;
+    height: 270px;
 }
 
 @media (max-width: 1024px) {
