--- a/style.css
+++ b/style.css
@@ -687,12 +687,16 @@ p {
     line-height: 20px;
 }
 
+.contact-agence {
+   text-align: center;
+   padding-top: 25px;
+}
+
 .citation {
     font-size: 20px;
     font-style: italic;
     margin: 0 22%;
     line-height: 25px;
-
 }
 
 .nom {
@@ -854,6 +858,13 @@ h4 {
 .img-responsive {
     width: 100%;
     height: auto;
+}
+
+.row-flex {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 @media (max-width: 1024px) {
