--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4372,8 +4372,7 @@ tbody.collapse.in {
     text-decoration: none;
     cursor: not-allowed;
     background-color: transparent;
-    background-image: none;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#330000ff,endColorstr=#330000ff)
+    background-image: none
 }
 
 .open>.dropdown-menu {
