--- a/style.css
+++ b/style.css
@@ -915,8 +915,8 @@ h4 {
         position: relative;
     }
     .bloc {
-        padding-left: constant(safe-area-inset-left, 1rem);
-        padding-right: constant(safe-area-inset-right, 1rem);
+        padding-left: auto;
+        padding-right: auto;
     }
     .bloc-group,
     .bloc-group .bloc {
@@ -926,8 +926,8 @@ h4 {
     .bloc-fill-screen .fill-bloc-top-edge,
     .bloc-fill-screen .fill-bloc-bottom-edge {
         padding: 0 20px;
-        padding-left: constant(safe-area-inset-left, 1rem);
-        padding-right: constant(safe-area-inset-right, 1rem);
+        padding-left: auto;
+        padding-right: auto;
     }
 }
 
